fix awkward line break on bill table

--- a/resources/assets/sass/components/_bill-list.scss
+++ b/resources/assets/sass/components/_bill-list.scss
@@ -231,7 +231,7 @@
 
     td.bill-table__bill-toggle {
         text-align: right;
-        width: 85px;
+        width: 95px;
     }
 
     .bill-table__cell-header,
